stop contact overflow into white

--- a/src/app.css
+++ b/src/app.css
@@ -189,6 +189,7 @@
 
 :root {
   font-family: "Source Code Pro", monospace;
+  background-color: var(--color-base);
   transition-property: all;
   transition-timing-function: var(
     --tw-ease,
